--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CollegeBuddy</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    hello world
+    <p>Hey buddy! Wassup!</p>
+    <p>How are you feeling today?!</p>
+    <button type="button">Nah, not in the mood :(</button>
+    <button type="button">Yayy!! Less goooo :)</button>
 </body>
 </html>
