--- a/index.html
+++ b/index.html
@@ -4,16 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>collegebuddy</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <form>
-        <label for="name">NAME:</label>
-        <input type="text" id="name" name="name"> 
-        <label for="age">AGE:</label> 
-        <input type="text" id="age" name="age">  
-        <label for="course">COURSE:</label> 
-        <input type="text" id="course" name="course"> 
-        <label for="sem">SEMESTER:</label> 
-        <input type="text" id="sem" name="sem">   
+        <div>
+            <label for="name">NAME:</label>
+            <input type="text" id="name" name="name">
+        </div>
+        <div>
+            <label for="age">AGE:</label>
+            <input type="text" id="age" name="age">
+        </div>
+        <div>
+            <label for="course">COURSE:</label>
+            <input type="text" id="course" name="course">
+        </div>
+        <div>
+            <label for="sem">SEMESTER:</label>
+            <input type="text" id="sem" name="sem">
+        </div>
+        <button type="submit">Submit</button>
+    </form>
 </body>
 </html>
