Added submit page

--- a/submit.html
+++ b/submit.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>Hey buddy! Wassup!</p>
-    <p>How are you feeling today?!</p>
+    <p>namukk padichaloo?!</p>
     <button type="button">Nah, not in the mood :(</button>
     <button type="button">Yayy!! Less goooo :)</button>
 </body>
