--- a/study.html
+++ b/study.html
@@ -5,12 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CollegeBuddy</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <p>ba thodankamm</p>
-    <p></p>
-    <button type="button">Nah, not in the mood :(</button>
-    <button type="button">Yayy!! Less goooo :)</button>
+    <p>what mood are u in today?</p>
+    <button type="button">COA</button>
+    <button type="button">PSM</button>
+    <button type="button">OS</button>
+    <button type="button">DBMS</button>
+    <button type="button">CHOOSE RANDOM</button>
 </body>
 </html>
